# mp710

./: .gitignore  CMakeLists.txt  QMake.pro  README.md  hid.c  hidapi.h  main.c
controller/include/: controller.h
controller/res/: controller.ui
controller/src/: controller.cpp  main.cpp
daemon/: CMakeLists.txt
daemon/include/: main.h  main.h~
daemon/src/: auxiliary.c  config_reader.c  daemon_destination.c  device_communication.c  hid.c  main.c
include/: vispart.h
src/: main.cpp  vispart.cpp
